update: about page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
         href: https://twitter.com/soumikRakshit96
       - icon: linkedin
         href: https://linkedin.com/in/soumikrakshit/
+      - icon: steam
+        href: https://steamcommunity.com/id/geekyRakshit/
 format:
   html:
     theme:
