--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,7 @@ website:
   navbar:
     right:
       - about.qmd
+      - courses.qmd
       - wandb_reports.qmd
       - posts.qmd
       - icon: github
